fixing responsive container width for mobile and tablets

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="header__wrapper container">
                 <div class="header__left">
                     <a href="https://ukdw.ac.id" target="_blank">Universitas Kristen Duta Wacana</a>
-                    <a href="https://eclass.ukdw.ac.id">e-class</a>
+                    <a href="https://eclass.ukdw.ac.id" class="hide">e-class</a>
                 </div>
-                <a href="">eclass.ukdw.ac.id</a>
+                <a href="" class="hide">eclass.ukdw.ac.id</a>
             </div>
         </header>
         <section class="section__logo">
@@ -93,6 +93,7 @@
                             </tr>
                         </tbody>
                     </table>
+                    <a href="">- UNDUH KALENDER AKADEMIK -</a>
                 </div>
                 <div>
                     <small class="list_agenda">Daftar agenda - April 2023</small>
